Added react-css-modules, browserslist config for autoprefixer Replaced self initialization with index.js

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>TodoMVC</title>
   <link rel="stylesheet" href="style.css"/>
-  <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
 <div id="content"></div>
-<script type="text/javascript">
-  TodoApp.init('content', {
-    url: 'http://localhost:8080/api/todos/',
-    pollInterval: 2000
-  });
-</script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
